manuela/components/apps/iot-consumer/base/iot-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: iot-consumer
    app.kubernetes.io/part-of: manuela
  name: iot-consumer
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iot-consumer
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iot-consumer
        deploymentconfig: iot-consumer
    spec:
      containers:
      - image: iot-consumer
        #imagePullPolicy: Always
        name: iot-consumer
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
