manuela/components/apps/iot-consumer/base/iot-consumer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-consumer
    app.kubernetes.io/part-of: manuela
  name: iot-consumer
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: iot-consumer
    deploymentconfig: iot-consumer
  sessionAffinity: None
  type: ClusterIP
